File Structure Optimization

--- a/Html-Files/setalarm.html
+++ b/Html-Files/setalarm.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     
-    <link rel='stylesheet' href='setalarm.js' />
-    <link rel='stylesheet' href='setalarm.css' />
+    <link rel='stylesheet' href='/Js-Files/setalarm.js' />
+    <link rel='stylesheet' href='/Css-Files/setalarm.css' />
   <meta charset="UTF-8">
   <title>Date & Time Alarm</title>
 </head>
