--- a/Html-Files/homepagebackground.html
+++ b/Html-Files/homepagebackground.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel='stylesheet' href='homepagebackground.css' />
+        <link rel='stylesheet' href='/Css-Files/homepagebackground.css' />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Smart Saver</title>
