Added a contact page to the website

--- a/Html-Files/homepagebackground.html
+++ b/Html-Files/homepagebackground.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
                         <li><a href="#akash"><i class="fa fa-at"></i>About</a></li>
-                        <li><a href="#"><i class="fa fa-address-book"></i>Contact</a></li>
+                        <li><a href="./contact.html"><i class="fa fa-address-book"></i>Contact</a></li>
                         <li><a href="#akash1"><i class="fa fa-shopping-cart"></i>Services</a></li>
 
                     </ul>
