Navbar UI changed.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <link rel='stylesheet' href='style.css' />
@@ -10,12 +10,12 @@
     <body>
         <header>
             <div class="navbar">
-                <!--this is for logo-->
+                <!--this is for logo-
                 <div class="logo">
                     <img src="LOGO.png">
 
                 </div>
-                <!--navigation items list like home about-->
+                <!--navigation items list like home about
                 <nav>
                     <ul>
                         <li><a href="#">home</a></li>
@@ -36,4 +36,44 @@
     </body>
 </html>
 
-https://tse3.mm.bing.net/th?id=OIP.lYslLxm3sZkmg85A4YkykwHaDl&pid=Api&P=0&h=180
+https://tse3.mm.bing.net/th?id=OIP.lYslLxm3sZkmg85A4YkykwHaDl&pid=Api&P=0&h=180 -->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Home Page</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    </head>
+    <body>
+        <nav class = "navbar bg-white">
+            <div class="container">
+                <div class = "navbar-content">
+                    <div class = "brand-and-toggler">
+                        <head>
+                            <title>Responsive NavBar</title>
+                            <meta name="viewport" content="width=device-width,initial-scale=1.0">
+                            <link rel="stylesheet" href="style.css">
+                        </head>
+                        <body>
+                            <nav>
+                                
+                                <label class="logo">Smart Saver</label>
+                            <ul>
+                                <li><a class="#" href="home.html"><i class="fa fa-home"></i>Home</a></li>
+                                <li><a class="#" href="about.html"><i class="fa fa-info-circle"></i>About Us</a></li>
+                                <li><a href="#"><i class="fa fa-globe"></i>Services</a></li>
+                                <li><a href="#"><i class="fa fa-users" ></i>Reviews</a></li>
+                                <li><a class="#" href="contact.html"><i class="fa fa-phone" ></i>Contact Us</a></li>
+                                <li><a class="#"href="login.html"><i class="fa fa-sign-in"></i>Log in</a></li>
+                            </ul>
+                            <section></section>
+                        </nav>
+                        <h1>Welcome To The<br><lucky>Smart Saver Website</lucky></h1>
+        </header>
+
+    </body>
+</html>
