Made the Background Image render perfectly .

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 
     </head>
     <body>
+        <style>
+            body {
+                background-image: url('https://tse3.mm.bing.net/th?id=OIP.lYslLxm3sZkmg85A4YkykwHaDl&pid=Api&P=0&h=180');
+                background-size: cover;
+                background-position: center;
+            }
+            
+            /* Add other styles as needed */
+        </style>
+        
+
         <header>
             <div class="navbar">
                 <!--this is for logo-->
