--- a/Html-Files/homepagebackground.html
+++ b/Html-Files/homepagebackground.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Smart Saver</title>
+        <link rel="icon" type="image/png" href="..\Html-Files\faviconimage.png">
         <!--font awesome icons limit on cdn-->
 
     </head>
